Test and Key rotator

--- a/HMSD/HMSD.EncryptionService/appsettings.json
+++ b/HMSD/HMSD.EncryptionService/appsettings.json
@@ -6,5 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "keyintervalseconds": "30",
+  "basetimekeytable": "jihgfedcba"
 }
