--- a/HMSD/HMSD.EncryptionService/HMSD.EncryptionService.csproj
+++ b/HMSD/HMSD.EncryptionService/HMSD.EncryptionService.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+    <Folder Include="Services\Interface\" />
+    <Folder Include="Exceptions\" />
+  </ItemGroup>
 </Project>
