app setting keys added

--- a/HMSD/HMSD.EncryptionService/appsettings.json
+++ b/HMSD/HMSD.EncryptionService/appsettings.json
@@ -7,6 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "keyintervalseconds": "30",
-  "basetimekeytable": "jihgfedcba"
+  "initVector": "gfedcba9uzpjih88",
+  "keysize": "256",
+  "passPhrase": "; *-RVcpcjHL <%$k: 7Sta(g < 4W~zj~Y"
 }
