--- a/HMSD/HMSD.EncryptionService/appsettings.json
+++ b/HMSD/HMSD.EncryptionService/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "initVector": "gfedcba9uzpjih88",
-  "keysize": "256",
-  "passPhrase": "; *-RVcpcjHL <%$k: 7Sta(g < 4W~zj~Y"
-}
+  "Encryptor": {
+    "InitVector": "gfedcba9uzpjih88",
+    "Keysize": "256"
+  }
+ }
