--- a/HMSD/HMSD.EncryptionService/HMSD.EncryptionService.csproj
+++ b/HMSD/HMSD.EncryptionService/HMSD.EncryptionService.csproj
@@ -14,5 +14,6 @@
     <Folder Include="Services\" />
     <Folder Include="Services\Interface\" />
     <Folder Include="Exceptions\" />
+    <Folder Include="Model\" />
   </ItemGroup>
 </Project>
