--- a/HMSD/HMSD.APIGateway/appsettings.json
+++ b/HMSD/HMSD.APIGateway/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EncryptionService": {
+    "BaseUrl": "http://localhost:5002/",
+    "DecryptorEndpoint": "DataDecryptor",
+    "EncryptorEndpoint": "DataEncryptor",
+    "KeyRotator": "KeyRotator"
+  }
 }
