--- a/HMSD/HMSD.EncryptionService/appsettings.json
+++ b/HMSD/HMSD.EncryptionService/appsettings.json
@@ -10,5 +10,6 @@
   "Encryptor": {
     "InitVector": "gfedcba9uzpjih88",
     "Keysize": "256"
-  }
- }
+  },
+  "Urls": "http://localhost:5002"
+}
