--- a/HMSD/HMSD.APIGateway/HMSD.APIGateway.csproj
+++ b/HMSD/HMSD.APIGateway/HMSD.APIGateway.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Model\" />
+    <Folder Include="Service\" />
+    <Folder Include="Service\Interface\" />
+  </ItemGroup>
 </Project>
