--- a/HMSD/HMSD.APIGateway/appsettings.json
+++ b/HMSD/HMSD.APIGateway/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "EncryptionService": {
-    "BaseUrl": "http://localhost:5002/",
+    "BaseUrl": "http://encryptor-api",
     "DecryptorEndpoint": "DataDecryptor",
     "EncryptorEndpoint": "DataEncryptor",
     "KeyRotator": "KeyRotator"
